tests/typing/good/testfile-conditional-1.scala
class C { def foo(x: AnyVal) : AnyVal = if(true) x else 42 }
object Main { def main(args: Array[String]) { } }
