tests/typing/bad/testfile-duplicate_tvar-2.scala

class C { def m[T,T](){} }
object Main { def main(args: Array[String]) { } }
